force-app/main/default/objects/maps__MiniMapSetting__c/maps__MiniMapSetting__c.object-meta.xml
<CustomObject>
    <label>Maps MiniMap Setting</label>
    <nameField>
        <label>MiniMap Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps MiniMap Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>