force-app/main/default/objects/maps__MiniMapSetting__c/fields/maps__Active__c.field-meta.xml
<CustomField>
    <fullName>maps__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>