force-app/main/default/objects/maps__MiniMapSetting__c/fields/maps__Is_Custom__c.field-meta.xml
<CustomField>
    <fullName>maps__Is_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom</label>
    <type>Checkbox</type>
</CustomField>