force-app/main/default/objects/maps__MiniMapSetting__c/fields/maps__Name__c.field-meta.xml
<CustomField>
    <fullName>maps__Name__c</fullName>
    <externalId>true</externalId>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>