force-app/main/default/objects/maps__MiniMapSetting__c/fields/maps__Object__c.field-meta.xml
<CustomField>
    <fullName>maps__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>