force-app/main/default/objects/maps__MiniMapSetting__c/fields/maps__Options__c.field-meta.xml
<CustomField>
    <fullName>maps__Options__c</fullName>
    <label>Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>